--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -3,7 +3,8 @@
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Home">
+    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Home"
+    android:background="#3B5998">
 
     <TextView
         android:layout_width="wrap_content"
@@ -12,7 +13,8 @@
         android:text="Montana MicroBreweries"
         android:id="@+id/homeTitle"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:textColor="#ffffff" />
 
     <Button
         android:layout_width="match_parent"
@@ -21,23 +23,30 @@
         android:id="@+id/btn_breweries"
         android:layout_below="@+id/homeTitle"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="36dp" />
+        android:layout_marginTop="36dp"
+        android:background="@drawable/custom_button" />
 
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Beer"
         android:id="@+id/btn_beer"
+        android:background="@drawable/custom_button"
+        android:layout_marginTop="20dp"
         android:layout_below="@+id/btn_breweries"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="State"
         android:id="@+id/btn_state"
+        android:layout_marginTop="20dp"
         android:layout_below="@+id/btn_beer"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:background="@drawable/custom_button"/>
 
     <Button
         android:layout_width="match_parent"
@@ -45,30 +54,19 @@
         android:text="Town"
         android:id="@+id/btn_town"
         android:layout_below="@+id/btn_state"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/custom_button"/>
 
-    <Button
+   <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Season"
         android:id="@+id/btn_season"
         android:layout_below="@+id/btn_town"
-        android:layout_centerHorizontal="true" />
-
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Nutritional Info"
-        android:id="@+id/btn_nutrition"
-        android:layout_below="@+id/btn_season"
-        android:layout_centerHorizontal="true" />
-
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Beer History"
-        android:id="@+id/btnBeerHistory"
-        android:layout_below="@+id/btn_nutrition"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:background="@drawable/custom_button"
+       android:layout_marginTop="20dp" />
 
 </RelativeLayout>
