--- a/app/src/main/res/layout/activity_town.xml
+++ b/app/src/main/res/layout/activity_town.xml
@@ -18,105 +18,12 @@
         android:layout_alignParentStart="true"
         android:textColor="#ffffff" />
 
-    <RadioGroup
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+    <ListView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/lvTown"
         android:layout_below="@+id/txtSearchByTown"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="36dp"
-        android:layout_alignRight="@+id/txtSearchByTown"
-        android:layout_alignEnd="@+id/txtSearchByTown"
-        android:id="@+id/radioGroup3">
+        android:layout_alignParentStart="true" />
 
-        <RadioButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Belgrade"
-            android:id="@+id/rbBelgrade"
-            android:checked="false"
-            android:onClick="onRadioButtonClicked" />
-
-        <RadioButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Billings"
-            android:id="@+id/rbBillings"
-            android:checked="false"
-            android:onClick="onRadioButtonClicked" />
-
-        <RadioButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Bozeman"
-            android:id="@+id/rbBozeman"
-            android:checked="false"
-            android:onClick="onRadioButtonClicked"/>
-
-        <RadioButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Hamilton"
-            android:id="@+id/rbHamilton"
-            android:checked="false"
-            android:onClick="onRadioButtonClicked" />
-
-        <RadioButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Helena"
-            android:id="@+id/rbHelena"
-            android:checked="false"
-            android:onClick="onRadioButtonClicked"/>
-
-        <RadioButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Livingston"
-            android:id="@+id/rbLivingston"
-            android:checked="false"
-            android:onClick="onRadioButtonClicked" />
-
-        <RadioButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Missoula"
-            android:id="@+id/rbMissoula"
-            android:checked="false"
-            android:onClick="onRadioButtonClicked" />
-
-        <RadioButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Stevensville"
-            android:id="@+id/rbStevensville"
-            android:checked="false"
-            android:onClick="onRadioButtonClicked" />
-
-        <RadioButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Wibaux"
-            android:id="@+id/rbWibaux"
-            android:checked="false"
-            android:onClick="onRadioButtonClicked" />
-
-        <Button
-            style="?android:attr/buttonStyleSmall"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Search"
-            android:id="@+id/btnSearchTwn"
-            android:background="@drawable/custom_button" />
-
-    </RadioGroup>
-
-    <RadioGroup
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_toRightOf="@+id/radioGroup3"
-        android:layout_toEndOf="@+id/radioGroup3"
-        android:layout_alignTop="@+id/radioGroup3"></RadioGroup>
 </RelativeLayout>
