--- a/app/src/main/res/layout/activity_beer_info.xml
+++ b/app/src/main/res/layout/activity_beer_info.xml
@@ -4,32 +4,34 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.kooknluke.montanabreweries.beerInfo">
+    tools:context="com.kooknluke.montanabreweries.beerInfo"
+    android:background="#3B5998">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Name"
         android:id="@+id/tvBeerDescriptionName"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:textColor="#ffffff"
+        android:layout_below="@+id/ivBeerImage"
+        android:layout_alignLeft="@+id/tvBeerDescription"
+        android:layout_alignStart="@+id/tvBeerDescription" />
 
     <ImageView
         android:layout_width="@android:dimen/thumbnail_width"
         android:layout_height="@android:dimen/thumbnail_height"
         android:id="@+id/ivBeerImage"
-        android:layout_below="@+id/tvBeerDescriptionName"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Description"
         android:id="@+id/tvBeerDescription"
-        android:layout_below="@+id/ivBeerImage"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:textColor="#ffffff"
+        android:layout_below="@+id/tvBeerDescriptionName"
+        android:layout_alignLeft="@+id/ivBeerImage"
+        android:layout_alignStart="@+id/ivBeerImage" />
 
 </RelativeLayout>
