--- a/app/src/main/res/layout/activity_seasons.xml
+++ b/app/src/main/res/layout/activity_seasons.xml
@@ -4,7 +4,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.kooknluke.montanabreweries.Seasons">
+    tools:context="com.kooknluke.montanabreweries.Seasons"
+    android:background="#3B5998">
 
     <TextView
         android:layout_width="wrap_content"
@@ -14,62 +15,15 @@
         android:id="@+id/txtSearchBySeason"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:textColor="#ffffff" />
 
-    <RadioGroup
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+    <ListView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/lvSeasons"
         android:layout_below="@+id/txtSearchBySeason"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="42dp"
-        android:id="@+id/radioGroup"
-        android:layout_alignRight="@+id/txtSearchBySeason"
-        android:layout_alignEnd="@+id/txtSearchBySeason">
-
-        <RadioButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Spring"
-            android:id="@+id/rbSpring"
-            android:checked="false"
-            android:onClick = "onRadioButtonClicked" />
-
-        <RadioButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Summer"
-            android:id="@+id/rbSummer"
-            android:checked="false"
-            android:onClick = "onRadioButtonClicked" />
-
-        <RadioButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Fall"
-            android:id="@+id/rbAutumn"
-            android:checked="false"
-            android:onClick = "onRadioButtonClicked" />
-
-        <RadioButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Winter"
-            android:id="@+id/rbWinter"
-            android:checked="false"
-            android:onClick = "onRadioButtonClicked" />
-
-        <Button
-            style="?android:attr/buttonStyleSmall"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Search"
-            android:id="@+id/btnSeasonSearch"
-            android:layout_alignBaseline="@+id/txtSeasonsTest"
-            android:layout_alignBottom="@+id/txtSeasonsTest"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
-
-    </RadioGroup>
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
