--- a/app/src/main/res/layout/activity_state.xml
+++ b/app/src/main/res/layout/activity_state.xml
@@ -4,38 +4,14 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.kooknluke.montanabreweries.State">
+    tools:context="com.kooknluke.montanabreweries.State"
+    android:background="#3B5998">
 
-    <TextView
+    <ListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Search By State"
-        android:id="@+id/txtSearchByState"
+        android:id="@+id/lvState"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
-
-    <RadioButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Montana"
-        android:id="@+id/rbMontana"
-        android:layout_below="@+id/txtSearchByState"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="36dp"
-        android:checked="false"
-        android:onClick="onRadioButtonClicked"/>
-
-    <Button
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Search"
-        android:id="@+id/btnSearchState"
-        android:layout_below="@+id/rbMontana"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
 </RelativeLayout>
