--- a/app/src/main/res/layout/activity_town_beer_list.xml
+++ b/app/src/main/res/layout/activity_town_beer_list.xml
@@ -4,7 +4,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.kooknluke.montanabreweries.townBeerList">
+    tools:context="com.kooknluke.montanabreweries.townBeerList"
+    android:background="#3B5998">
 
     <ListView
         android:layout_width="wrap_content"
